--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -1,6 +1,6 @@
 <div class="search-bar form-inline">
-  <input class="form-control" type="text" />
-  <button class="btn">
+  <input class="form-control" type="text" placeholder="search youtube..." ng-model="$ctrl.query"/>
+  <button class="btn" ng-click="$ctrl.result($ctrl.query)">
     <span class="glyphicon glyphicon-search"></span>
   </button>
 </div>
